Melhoria da estrutura base do dashboard, ajustes no sidebar, criação de tela de estoque, tela de cadastro de entrada, ajustes no css, ajutes no navbar, adicionado dependencias e outras melhorias

--- a/front/src/scss/volt/_variables.scss
+++ b/front/src/scss/volt/_variables.scss
@@ -520,7 +520,7 @@ $embed-responsive-aspect-ratios: (
 
 // font awesome
 $fontawesome-webfonts-path:   '../vendor/font-awesome/webfonts';
-$font-awesome-5:              'Font Awesome 5 Free';
+$font-awesome-5:              'FontAwesome';
 
 // stylelint-disable value-keyword-case
 $font-family-sans-serif:      'Nunito Sans', sans-serif;
